# Playlist-Management-Simulator

./: CMakeLists.txt  README.md
include/: Lista.h  Music.h  Musica.h  Node.h  Playlist.h  System.h  listaMusica.h  musica.h  noLista.h  noPlaylist.h  playlist.h  playlistManager.h
src/: Gerenciador.cpp  Music.cpp  Musica.cpp  Playlist.cpp  PlaylistManager.cpp  System.cpp  listaMusica.cpp  main.cpp  musica.cpp  noLista.cpp  noPlaylist.cpp  playlist.cpp  playlistManager.cpp
